--- a/E-commerce/package.json
+++ b/E-commerce/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.25.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ip": "^1.0.4",
