--- a/Flask app/requirements.txt
+++ b/Flask app/requirements.txt
@@ -1,6 +1,5 @@
 cloudinary==1.25.0
 DateTime==4.3
-deepface==0.0.50
 email-validator==1.1.2
 Flask==1.1.2
 flask-marshmallow==0.14.0
@@ -12,5 +11,6 @@ PyMySQL==1.0.2
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 requests==2.25.1
+tensorflow-cpu==2.4.1
 WTForms==2.3.3
 
