Separate Face recognition

--- a/Face Recognition Api/Pipfile
+++ b/Face Recognition Api/Pipfile
@@ -4,8 +4,14 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+requests = "*"
+cmake = "*"
+dlib = "*"
+face-recognition = "*"
+gunicorn = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.7"
